<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2018 Hai Zhang <dreaming.in.code.zh@gmail.com>
  ~ All Rights Reserved.
  -->

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/search_icon_control_normal_24dp"
        android:orderInCategory="100"
        android:title="@string/search"
        app:actionViewClass="me.zhanghai.android.files.ui.FixQueryChangeSearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/action_view_sort"
        android:icon="@drawable/sort_icon_control_normal_24dp"
        android:orderInCategory="100"
        android:title="@string/file_list_action_view_sort"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_new_task"
        android:orderInCategory="100"
        android:title="@string/file_list_action_new_task"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_navigate_up"
        android:orderInCategory="100"
        android:title="@string/file_list_action_navigate_up"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_navigate_to"
        android:alphabeticShortcut="l"
        android:orderInCategory="100"
        android:title="@string/file_list_action_navigate_to"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_refresh"
        android:alphabeticShortcut="r"
        android:orderInCategory="100"
        android:title="@string/refresh"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_select_all"
        android:alphabeticShortcut="a"
        android:orderInCategory="100"
        android:title="@string/select_all"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_show_hidden_files"
        android:alphabeticShortcut="h"
        android:orderInCategory="100"
        android:title="@string/file_list_action_show_hidden_files"
        android:checkable="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:title="@string/share"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_copy_path"
        android:orderInCategory="100"
        android:title="@string/file_list_action_copy_path"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_open_in_terminal"
        android:orderInCategory="100"
        android:title="@string/file_list_action_open_in_terminal"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_rescan_media"
        android:orderInCategory="100"
        android:title="@string/file_list_action_rescan_media"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_add_bookmark"
        android:orderInCategory="100"
        android:title="@string/file_list_action_add_bookmark"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_create_shortcut"
        android:orderInCategory="100"
        android:title="@string/file_list_action_create_shortcut"
        app:showAsAction="never" />
</menu>
