<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2019 Hai Zhang <dreaming.in.code.zh@gmail.com>
  ~ All Rights Reserved.
  -->

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/action_save"
        android:icon="@drawable/save_icon_control_normal_24dp"
        android:orderInCategory="100"
        android:title="@string/save"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/action_save_as"
        android:orderInCategory="100"
        android:title="@string/text_editor_save_as"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_find"
        android:alphabeticShortcut="f"
        android:orderInCategory="100"
        android:title="@string/text_editor_find"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_find_next"
        android:orderInCategory="100"
        android:title="@string/text_editor_find_next"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_undo"
        android:orderInCategory="100"
        android:title="@string/text_editor_undo"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_redo"
        android:orderInCategory="100"
        android:title="@string/text_editor_redo"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_read_only"
        android:orderInCategory="100"
        android:title="@string/text_editor_read_only"
        android:checkable="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_reload"
        android:orderInCategory="100"
        android:title="@string/reload"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_monospace"
        android:checkable="true"
        android:orderInCategory="100"
        android:title="@string/text_editor_monospace"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_word_wrap"
        android:orderInCategory="100"
        android:title="@string/text_editor_word_wrap"
        android:checkable="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_encoding"
        android:orderInCategory="100"
        android:title="@string/text_editor_encoding"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_line_ending"
        android:orderInCategory="100"
        android:title="@string/text_editor_line_ending"
        app:showAsAction="never" />
</menu>
